# ASS

./: .gitignore  Cargo.toml  README.md  test.asml  test.ass
documents/: README.md  charter.md  spec.md  specification.md
documents/alpha/: progress.fdb_latexmk  progress.fls  progress.tex
documents/beta_report/: beta_report.tex
documents/blog/: alpha.md  beta.md
documents/examples/: ex1.ass  ex1.html  ex1ass.html
documents/final_report/: report.tex
src/: asml_parser.rs  ass_parser.rs  lib.rs  main.rs
src/display/: color.rs  mod.rs  scene.rs
src/dom/: mod.rs  render_tree.rs  style_tree.rs
src/parser/: asml_parser.rs  ass_parser.rs  mod.rs  parser.rs
tests/: asml_parser_tests.rs  test02.asml
tests/asml_examples/: asml_1
