[package]
name = "ass"
version = "0.1.0"
authors = ["ashpil <shpilenok2001@gmail.com>", "fykemang <mfang2197@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peg = "0.6.3"
cassowary = "^0.3.0"
minifb = "0.19.1"

